Cyberduck
https://cyberduck.io/

6.2.4
- [Feature] Provide URL references to Office 365 documents in browser (OneDrive)

6.2.3
- [Feature] Allow to resume downloads (Cryptomator)
- [Feature] Allow to resume downloads (Dropbox)
- [Bugfix] Failure duplicating files (FTP) (#10049)
- [Bugfix] Failure with input prompt for username and password (CLI, Windows) (#10043)
- [Bugfix] Failure to detect vault when moving files into locked vault (Cryptomator)
- [Bugfix] Failure to detect vault when copying files into locked vault (Cryptomator)
- [Bugfix] Checksum mismatch when downloading versioned file (S3) (#10055)

6.2.2
- [Bugfix] Failure copying files in vault (Cryptomator)
- [Bugfix] Failure detecting vault when uploading, copying or moving files to locked vault (Cryptomator)

6.2.1
- [Bugfix] Default to WebDAV for http:// scheme in quick connect and CLI
- [Bugfix] Selecting multiple files to copy URL will only copy first item in list (#10024)
- [Bugfix] Quick Look only works one time (#9889) (Mac)

6.2
- [Feature] Server side copy of files (OneDrive)
- [Feature] Support for wildcard host entries in known_hosts (SFTP)
- [Bugfix] Missing x-amz-server-side-encryption header when creating folders (S3) (#9378)
- [Bugfix] Preserve content type when overwriting files (Google Drive)
- [Bugfix] Missing registered protocols (CLI)
- [Bugfix] Long time preparing upload into vault (Cryptomator)
- [Bugfix] Set charset for basic authentication scheme used for preemtive authentication (WebDAV)
- [Bugfix] Timeout uploading larger files (Google Drive) (#10010)
- [Bugfix] Set checksum for large file uploads in fileInfo metadata (Backblaze B2)
- [Bugfix] Default ACL for new buckets has changed to private (S3)
- [Bugfix] Failure duplicating files in vault (Cryptomator) (#10017)

6.1
- [Feature] Search files fast without recursively listing directories (OneDrive)
- [Feature] Search files fast without recursively listing directories (S3)