@@ -26,10 +26,6 @@
             border: 1px solid #cccccc;
             color: black;
         }
-
-
-
-
     </style>
 </head>
 
@@ -45,6 +41,17 @@
         href="https://trac.cyberduck.io/milestone/6.0">6.0</a>
     supports transparent <strong>client-side encryption</strong> using Cryptomator interoperable vaults.
 </p>
+
+<p>
+    <a href="https://trac.cyberduck.io/milestone/6.2.4"><strong>Version 6.2.4</strong></a>
+</p>
+<ul>
+    <li>[Feature] Provide URL references to Office 365 documents in browser (OneDrive)</li>
+    <li>[Feature] Disable Bonjour notifications</li>
+    <li>[Bugfix] Transfer progress stops updating (Windows) (<a
+            href="https://trac.cyberduck.io/ticket/10042">#10042</a>)
+    </li>
+</ul>
 
 <p>
     <a href="https://trac.cyberduck.io/milestone/6.2.3"><strong>Version 6.2.3</strong></a>
